# frugal-engine

./: .gitignore  README.md  pyproject.toml
src/frugal_engine/: main.py
