[project]
name = "frugal-engine"
version = "0.2.0"
description = "Automatically selects either single-node or distributed execution engine based on the input data statistics. For Unity Catalog."
readme = "README.md"
authors = [
    { name = "Lukas Valatka", email = "lukas.valatka123@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "deltalake>=0.21.0",
    "duckdb>=1.1.3",
    "ipykernel>=6.29.5",
    "ipython>=8.12.3",
    "ipython-sql>=0.5.0",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "polars>=1.8.2",
    "pyspark>=3.5.4",
    "sqlglot>=26.3.9",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
